detail player is done

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,8 +10,8 @@ $text-font: 'Mulish', Arial, Helvetica, sans-serif;
 
 //** COLORS **//
 $white-color: #fefefe;
-$grey-color: #b2b2b2;
-$black-color: #2d3436;
+$black-color: #000000 ;
+
 
 $text-color: #130f40;
 $main-color: #f2753b;
