--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,7 +6,17 @@ html {
     font-weight: 400;
     color: $text-color;
   }
+ .bg-container {
+    width: 100%;
+    height: 100vh;
+    flex-shrink: 0;
+  }
   
+  body {
+    background: $white-color;
+    overflow: hidden;
+    
+  }
   
   
  
